samples/_failures_safe/1761169981_78fc0e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_471121db.c: In function ‘main’:
./samples/SAFE/__tmp_471121db.c:156:19: error: expected ‘;’ at end of input
  156 |             result
      |                   ^
      |                   ;
./samples/SAFE/__tmp_471121db.c:156:13: error: expected declaration or statement at end of input
  156 |             result
      |             ^~~~~~
./samples/SAFE/__tmp_471121db.c:156:13: error: expected declaration or statement at end of input
